[gd_scene load_steps=39 format=3 uid="uid://b3dtk2snxdgij"]

[ext_resource type="Script" path="res://Script/player.gd" id="1_b15sp"]
[ext_resource type="Texture2D" uid="uid://cdw8nauxy5q1c" path="res://Characters/天麒.png" id="2_yhwia"]
[ext_resource type="Script" path="res://Camera2D.gd" id="4_622eh"]
[ext_resource type="Texture2D" uid="uid://b5iacd88b8gqk" path="res://Animations/辅助-降速度.png" id="5_7tq41"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1eey2"]
load_path = "res://.godot/imported/tile000.png-7f4822d32f62f9121ee366e786ad9818.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_ioiv3"]
atlas = ExtResource("2_yhwia")
region = Rect2(0, 117, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_g43pw"]
atlas = ExtResource("2_yhwia")
region = Rect2(82, 117, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_x151h"]
atlas = ExtResource("2_yhwia")
region = Rect2(164, 117, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufvwd"]
atlas = ExtResource("2_yhwia")
region = Rect2(246, 117, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_hok1p"]
atlas = ExtResource("2_yhwia")
region = Rect2(0, 117, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rwmy"]
atlas = ExtResource("2_yhwia")
region = Rect2(0, 351, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdu2q"]
atlas = ExtResource("2_yhwia")
region = Rect2(82, 351, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rpr7"]
atlas = ExtResource("2_yhwia")
region = Rect2(164, 351, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_g43fi"]
atlas = ExtResource("2_yhwia")
region = Rect2(246, 351, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_a12uo"]
atlas = ExtResource("2_yhwia")
region = Rect2(0, 0, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_auf8e"]
atlas = ExtResource("2_yhwia")
region = Rect2(82, 0, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt7gf"]
atlas = ExtResource("2_yhwia")
region = Rect2(164, 0, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wpwf"]
atlas = ExtResource("2_yhwia")
region = Rect2(246, 0, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty8lx"]
atlas = ExtResource("2_yhwia")
region = Rect2(0, 234, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujc3g"]
atlas = ExtResource("2_yhwia")
region = Rect2(82, 234, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdlqq"]
atlas = ExtResource("2_yhwia")
region = Rect2(164, 234, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv8p8"]
atlas = ExtResource("2_yhwia")
region = Rect2(246, 234, 82, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkr10"]
atlas = ExtResource("2_yhwia")
region = Rect2(0, 234, 82, 117)

[sub_resource type="SpriteFrames" id="SpriteFrames_0lx1r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioiv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g43pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x151h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufvwd")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hok1p")
}],
"loop": true,
"name": &"downStand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rwmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdu2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rpr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g43fi")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a12uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auf8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt7gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wpwf")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty8lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujc3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdlqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv8p8")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkr10")
}],
"loop": true,
"name": &"upStand",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rbu1l"]
radius = 20.0
height = 44.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q3i4g"]
radius = 21.0
height = 42.0

[sub_resource type="AtlasTexture" id="AtlasTexture_lc1be"]
atlas = ExtResource("5_7tq41")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kday3"]
atlas = ExtResource("5_7tq41")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0pab"]
atlas = ExtResource("5_7tq41")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljos6"]
atlas = ExtResource("5_7tq41")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2l2i3"]
atlas = ExtResource("5_7tq41")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_38d1b"]
atlas = ExtResource("5_7tq41")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rerw"]
atlas = ExtResource("5_7tq41")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuvea"]
atlas = ExtResource("5_7tq41")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7vaa"]
atlas = ExtResource("5_7tq41")
region = Rect2(576, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_nb6ta"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc1be")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kday3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0pab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljos6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2l2i3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38d1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rerw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuvea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7vaa")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}, {
"frames": [],
"loop": false,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_6mlwq"]
offsets = PackedFloat32Array(0, 0.667602)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lc6m3"]
gradient = SubResource("Gradient_6mlwq")
fill = 1
fill_from = Vector2(0.504274, 0.509971)

[node name="players" type="CharacterBody2D" groups=["mapPlayer"]]
position = Vector2(504, 270)
script = ExtResource("1_b15sp")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = SubResource("CompressedTexture2D_1eey2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0lx1r")
animation = &"up"
frame = 2
frame_progress = 0.448801

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 17)
shape = SubResource("CapsuleShape2D_rbu1l")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2, -1)
ignore_rotation = false
zoom = Vector2(1.1, 1.1)
limit_left = 0
limit_top = 0
limit_right = 2401
limit_bottom = 2396
script = ExtResource("4_622eh")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(52, -22)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-53, 39)
shape = SubResource("CapsuleShape2D_q3i4g")

[node name="playTime" type="Timer" parent="."]
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-1, 76)
collision_mask = 4

[node name="RayCast2D2" type="RayCast2D" parent="."]
visible = false
enabled = false
target_position = Vector2(0, 10)

[node name="effect" type="AnimatedSprite2D" parent="."]
position = Vector2(-26, -38)
sprite_frames = SubResource("SpriteFrames_nb6ta")
frame = 8
frame_progress = 1.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="NavigationAgent2Ds" type="NavigationAgent2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-1.49999, -4.99999)
scale = Vector2(11.3906, 10.1563)
energy = 0.52
texture = SubResource("GradientTexture2D_lc6m3")

[node name="readyMove" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="RayCast2D3" type="RayCast2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="sprite_frames_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_sprite_frames_changed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="playTime" to="." method="_on_play_time_timeout"]
[connection signal="timeout" from="readyMove" to="." method="_on_ready_move_timeout"]
